--- a/styles.css
+++ b/styles.css
@@ -16,31 +16,46 @@ body{
 }
 
 main{
-    border: 2px solid black;
-    height: 90vh;
-    width: 90vw;
+    /* border: 1px solid black; */
+    padding: 10px 23px;
+    /* height: 90vh; */
+    width: 50vw;
 }
+
+#input-box{
+    margin: 12px 23px;
+    display: flex;
+    justify-content: space-around;
+}
+
+#input-box input{
+    width: 32%;
+    font-size: 23px;
+
+}
+
+
 #container{
     width: 100%;
     height: 100%;
     border: 1px solid black;
 
     display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
     flex-wrap: wrap;
-
 }
 
-.card{
-    height: 100px;
-    width: 100px;
-
-
-    background-color: var(--clr-primary);
+.square{
+    height: 10vh;
+    width: 10vh;
+    
     margin: 4px;
-
-    grid-template-columns: repeat(auto-fill,minmax(160px, 1fr));
-    background-color: blue;
+    /* grid-template-columns: repeat(auto-fill,minmax(160px, 1fr)); */
+    background-color: skyblue;
 }
-.box:hover{
+
+
+.square:hover{
     background-color: var(--clr-gray-med);
 }
