--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin:0;
     padding: 0;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
 
 }
 :root{
@@ -23,10 +28,30 @@ body{
     justify-content: space-between;
     margin-bottom: 34px;
 }
-.btn-add{
-    width: 10%;
-    height: 25px;
+
+.btn{
+    color: white;
+    width: 89px;
+    height: 34px;
+    border-radius: 5px;
+    border: none;
 }
+
+.btn:hover{
+    cursor: pointer;
+    background-color:#cab287;
+}
+
+.btn-add{
+    color: black;
+    background-color:gray;
+}
+
+.btn-erase{
+    color: black;
+    background-color:gray;
+}
+
 .slider{
     -webkit-appearance: none;
     width: 40%;
@@ -53,15 +78,40 @@ body{
 
 #main-container{
     display: grid;
-    grid-gap: 3px;
-    grid-template-columns: repeat(auto-fit, minmax(12px, 1fr));
+    grid-gap: 2px;
+    grid-template-columns: repeat(auto-fit, minmax(15px, 1fr));
     justify-content: center;
 }
 
 .square{
-    height: 12px;
-    width: 12px;
+    height: 15px;
+    width: 15px;
     background-color: whitesmoke;
     border: 1px solid darkgray;
+}
+.square:hover{
+    cursor:crosshair;
+}
+
+.change-colour{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 34px;
+}
+
+.btn-red{
+    background-color: #dc143c;
+}
+
+.btn-yellow{
+    background-color: #FFD700;
+}
+
+.btn-blue{
+    background-color: #2962ff;
+}
+
+.btn-green{
+    background-color: #04AA6D;
 }
 
